Bug 1357742 - Drop INPUT_EVENT_RESPONSE_MS measurements across sleep/wake. r=smaug, a=gchang

It is possible that events created before the OS goes to sleep will remain
unhandled until after the OS wakes. They will have long response times on
platforms where TimeStamp increments during sleep (like Windows) even though
they really shouldn't. (and the user likely doesn't care if they do).

So don't record those.

MozReview-Commit-ID: 4ybjF8gjkae

--HG--
extra : source : 1e9b46dbf4b579a9f03e918eec188afea7da8fd1